--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         darkMode: 'class',
       }
     </script>
+    <link rel="stylesheet" href="/styles.css">
     <!-- PDF Export Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
