--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/d3-hierarchy@3"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-treemap@2"></script>
     <!-- File Parsing Libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/paparse.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 <script type="importmap">
 {
